--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.[oa]
 *~
 /ourproject/img/
-/ourproject/ourproject.pro.user*
+*.user*
 /ourproject/images.txt*
 /ourproject/*.out*
 /ourproject/*.jpg
@@ -10,3 +10,5 @@
 *.png
 Makefile
 *.out
+*.autosave*
+
